--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -10,6 +10,7 @@
 # Fabiano Ramos <fabiano.suporteinfo@gmail.com>, 2018
 # F Marcelo O Amarante <marcelo.amarante@hotmail.com>, 2015
 # Fuad Saud <fuadksd@gmail.com>, 2012
+# Fúlvio Alves <fga.fulvio@gmail.com>, 2020
 # mcnd2 <glauber_gf@hotmail.com>, 2012
 # Iuri Suzano <isuzano@netkings.cc>, 2017
 # John_Norum <john.norum4@gmail.com>, 2012
@@ -29,8 +30,8 @@ msgstr ""
 "Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: https://redmine.audacious-media-player.org/\n"
 "POT-Creation-Date: 2020-01-26 13:18+0100\n"
-"PO-Revision-Date: 2020-01-26 12:22+0000\n"
-"Last-Translator: John Lindgren <john@jlindgren.net>\n"
+"PO-Revision-Date: 2020-05-01 16:56+0000\n"
+"Last-Translator: Fúlvio Alves <fga.fulvio@gmail.com>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/audacious/audacious/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -57,7 +58,7 @@ msgstr "<b>Saída</b>"
 
 #: src/adplug/adplug-xmms.cc:349
 msgid "OPL Emulator:"
-msgstr ""
+msgstr "Emulador OPL:"
 
 #: src/adplug/adplug-xmms.cc:352
 msgid "Sample rate"
@@ -997,7 +998,7 @@ msgstr "Usar modo exclusivo"
 
 #: src/coreaudio/coreaudio.cc:174
 msgid "Use bit perfect audio (adapt device sampling rate)"
-msgstr ""
+msgstr "Usar áudio perfeito (ajusta a taxa de amostragem do dispositivo)"
 
 #: src/crossfade/crossfade.cc:43
 msgid ""
@@ -1648,12 +1649,12 @@ msgstr "_Próxima"
 #: src/gtkui/menus.cc:97 src/qtui/menus.cc:140 src/skins/menus.cc:114
 #: src/skins-qt/menus.cc:105
 msgid "Previous Album"
-msgstr ""
+msgstr "Álbum anterior"
 
 #: src/gtkui/menus.cc:98 src/qtui/menus.cc:141 src/skins/menus.cc:115
 #: src/skins-qt/menus.cc:106
 msgid "Next Album"
-msgstr ""
+msgstr "Próximo álbum"
 
 #: src/gtkui/menus.cc:100 src/qtui/menus.cc:143
 msgid "_Repeat"
@@ -2092,11 +2093,11 @@ msgstr "Próxima faixa"
 
 #: src/hotkey/gui.cc:76
 msgid "Step forward"
-msgstr ""
+msgstr "Avançar"
 
 #: src/hotkey/gui.cc:77
 msgid "Step backward"
-msgstr ""
+msgstr "Retroceder"
 
 #: src/hotkey/gui.cc:78
 msgid "Mute"
@@ -2147,7 +2148,7 @@ msgid ""
 "It is not recommended to bind the primary mouse buttons without modifiers.\n"
 "\n"
 "Do you want to continue?"
-msgstr ""
+msgstr "Não é recomendável associar os botoes principais do mouse sem modificadores.\n\nContinuar?"
 
 #: src/hotkey/gui.cc:236
 msgid "Binding mouse buttons"
@@ -2192,7 +2193,7 @@ msgid ""
 " Bryn Davies <curious@ihug.com.au>,\n"
 " Jonathan A. Davis <davis@jdhouse.org>,\n"
 " Jeremy Tan <nsx@nsx.homeip.net>"
-msgstr ""
+msgstr "Plugin Global Hotkey\nControla o player com combinações globais de teclas ou com teclas multimídia.\n\nCopyright (C) 2007-2008 Sascha Hlusiak <contact@saschahlusiak.de>\n\nOutros colaboradores:\nCopyright (C) 2006-2007 Vladimir Paskov <vlado.paskov@gmail.com>\nCopyright (C) 2000-2002 Ville Syrjälä <syrjala@sci.fi>,\n Bryn Davies <curious@ihug.com.au>,\n Jonathan A. Davis <davis@jdhouse.org>,\n Jeremy Tan <nsx@nsx.homeip.net>."
 
 #: src/jack/jack-ng.cc:51
 msgid "JACK Output"
@@ -2200,7 +2201,7 @@ msgstr "Saída JACK"
 
 #: src/jack/jack-ng.cc:123
 msgid "Client name:"
-msgstr ""
+msgstr "Nome do cliente:"
 
 #: src/jack/jack-ng.cc:125
 msgid "Automatically connect to output ports"
@@ -2208,27 +2209,27 @@ msgstr "Conectar-se automaticamente às portas de saída"
 
 #: src/jack/jack-ng.cc:127
 msgid "Filter ports (regex, use any port if blank):"
-msgstr ""
+msgstr "Filtrar portas (regex, usa qualquer porta se estiver em branco):"
 
 #: src/jack/jack-ng.cc:133
 msgid "Connect to physical ports only"
-msgstr ""
+msgstr "Conectar apenas a portas físicas"
 
 #: src/jack/jack-ng.cc:136
 msgid "Upmix to"
-msgstr ""
+msgstr "Upmix para"
 
 #: src/jack/jack-ng.cc:138
 msgid "ports if input has fewer channels"
-msgstr ""
+msgstr "portas se a entrada tiver menos canais"
 
 #: src/jack/jack-ng.cc:140
 msgid "Ignore insufficient number of ports"
-msgstr ""
+msgstr "Ignorar número insuficiente de portas"
 
 #: src/jack/jack-ng.cc:178
 msgid "No JACK output ports were found. Please check settings."
-msgstr ""
+msgstr "Não foram encontradas portas de saída JACK. Por favor, verifique as configurações."
 
 #: src/jack/jack-ng.cc:192
 #, c-format
@@ -2373,7 +2374,7 @@ msgstr "Metadados da música faltando"
 
 #: src/lyricwiki/lyricwiki.cc:310
 msgid "Connecting to lyrics.fandom.com ..."
-msgstr ""
+msgstr "Conectando com lyrics.fandom.com ..."
 
 #: src/lyricwiki/lyricwiki.cc:351
 msgid "Edit lyrics ..."
@@ -2381,59 +2382,59 @@ msgstr "Editar letras ..."
 
 #: src/lyricwiki-qt/lyricwiki.cc:88
 msgid "Lyrics"
-msgstr ""
+msgstr "Letras"
 
 #: src/lyricwiki-qt/lyricwiki.cc:111
 msgid "Nowhere"
-msgstr ""
+msgstr "Nenhum lugar"
 
 #: src/lyricwiki-qt/lyricwiki.cc:112
 msgid "LyricWiki"
-msgstr ""
+msgstr "LyricWiki"
 
 #: src/lyricwiki-qt/lyricwiki.cc:113
 msgid "lyrics.ovh"
-msgstr ""
+msgstr "lyrics.ovh"
 
 #: src/lyricwiki-qt/lyricwiki.cc:117
 msgid "<b>Internet Sources</b>"
-msgstr ""
+msgstr "<b>Fontes da Internet</b>"
 
 #: src/lyricwiki-qt/lyricwiki.cc:118
 msgid "Fetch lyrics from:"
-msgstr ""
+msgstr "Obter letras de:"
 
 #: src/lyricwiki-qt/lyricwiki.cc:121
 msgid "Store fetched lyrics in local cache"
-msgstr ""
+msgstr "Armazenar letras obtidas no cache local"
 
 #: src/lyricwiki-qt/lyricwiki.cc:123
 msgid "<b>Local Storage</b>"
-msgstr ""
+msgstr "<b>Armazenamento local</b>"
 
 #: src/lyricwiki-qt/lyricwiki.cc:124
 msgid "Load lyric files (.lrc) from local storage"
-msgstr ""
+msgstr "Carregar arquivos de letra (.lrc) do armazenamento local"
 
 #: src/lyricwiki-qt/lyricwiki.cc:664
 msgid "Lyrics could not be found."
-msgstr ""
+msgstr "Não foi possível encontrar a letra."
 
 #: src/lyricwiki-qt/lyricwiki.cc:701
 msgid "Missing title and/or artist."
-msgstr ""
+msgstr "Título e/ou artista ausentes."
 
 #: src/lyricwiki-qt/lyricwiki.cc:751
 msgid "Edit Lyrics ..."
-msgstr ""
+msgstr "Editar letras..."
 
 #: src/lyricwiki-qt/lyricwiki.cc:759
 msgid "Save Locally"
-msgstr ""
+msgstr "Salvar localmente"
 
 #: src/lyricwiki-qt/lyricwiki.cc:767
 msgid "Refresh"
-msgstr ""
+msgstr "Atualizar"
 
 #: src/m3u/m3u.cc:32
 msgid "M3U Playlists"
@@ -2668,18 +2669,18 @@ msgstr "Exibir"
 
 #: src/openmpt/mpt.cc:50
 msgid "OpenMPT (Module Player)"
-msgstr ""
+msgstr "OpenMPT (Módulo Reprodutor)"
 
 #: src/openmpt/mpt.cc:134
 msgid ""
 "Module player based on libopenmpt\n"
 "\n"
 "Written by: Chris Spiegel <cspiegel@gmail.com>"
-msgstr ""
+msgstr "Módulo reprodutor baseado em libopenmpt\n\nEscrito por: Chris Spiegel <cspiegel@gmail.com>"
 
 #: src/openmpt/mpt.cc:153
 msgid "Stereo separation:"
-msgstr ""
+msgstr "Separação estéreo:"
 
 #: src/openmpt/mpt.cc:155
 msgid "%"
@@ -2687,7 +2688,7 @@ msgstr "%"
 
 #: src/openmpt/mpt.cc:159
 msgid "Interpolation:"
-msgstr ""
+msgstr "Interpolação:"
 
 #: src/openmpt/mptwrap.h:51 src/soxr/sox-resampler.cc:174
 msgid "Linear"
@@ -2695,7 +2696,7 @@ msgstr "Linear"
 
 #: src/openmpt/mptwrap.h:52
 msgid "Cubic"
-msgstr ""
+msgstr "Cúbica"
 
 #: src/openmpt/mptwrap.h:53
 msgid "Windowed sinc"
@@ -2771,7 +2772,7 @@ msgstr "Decodificador OpenPSF PDF1/PSF2"
 
 #: src/psf/plugin.cc:269
 msgid "<b>OpenPSF Configuration</b>"
-msgstr ""
+msgstr "<b>Configuração do OpenPSF</b>"
 
 #: src/psf/plugin.cc:270 src/xsf/plugin.cc:232
 msgid "Ignore length from file"
@@ -2783,11 +2784,11 @@ msgstr "Saída PulseAudio"
 
 #: src/pulse/pulse_audio.cc:72
 msgid "Context name:"
-msgstr ""
+msgstr "Nome do contexto:"
 
 #: src/pulse/pulse_audio.cc:74
 msgid "Stream name:"
-msgstr ""
+msgstr "Nome do stream:"
 
 #: src/pulse/pulse_audio.cc:575
 msgid ""
@@ -2892,19 +2893,19 @@ msgstr "Procurar lista de reprodução "
 
 #: src/qtui/settings.cc:52
 msgid "Always"
-msgstr ""
+msgstr "Sempre"
 
 #: src/qtui/settings.cc:53
 msgid "Auto-hide"
-msgstr ""
+msgstr "Ocultar automaticamente"
 
 #: src/qtui/settings.cc:54
 msgid "Never"
-msgstr ""
+msgstr "Nunca"
 
 #: src/qtui/settings.cc:58
 msgid "Show playlist tabs:"
-msgstr ""
+msgstr "Mostrar guias da lista de reprodução:"
 
 #: src/resample/resample.cc:43
 msgid "Sample Rate Converter"
@@ -3104,7 +3105,7 @@ msgstr "Re-escanear lista de reprodução na inicialização"
 
 #: src/search-tool-qt/search-tool-qt.cc:168
 msgid "Monitor library for changes"
-msgstr ""
+msgstr "Monitorar a biblioteca por alterações"
 
 #: src/search-tool-qt/search-tool-qt.cc:191 src/search-tool/search-tool.cc:446
 msgid ""
@@ -3822,7 +3823,7 @@ msgstr "Coloração do Gravador de Voz:"
 
 #: src/skins-qt/skins_cfg.cc:284 src/skins/skins_cfg.cc:266
 msgid "VU Meter Style:"
-msgstr "Estilo do Medidor VU"
+msgstr "Estilo do Medidor de VU"
 
 #: src/skins-qt/skins_cfg.cc:290 src/skins/skins_cfg.cc:272
 msgid "<b>Type</b>"
@@ -4053,7 +4054,7 @@ msgstr "Permitir apelido"
 
 #: src/soxr/sox-resampler.cc:187
 msgid "Use steep filter"
-msgstr ""
+msgstr "Usar filtro íngreme"
 
 #: src/speedpitch/speed-pitch.cc:54
 msgid "Speed and Pitch"
@@ -4151,39 +4152,39 @@ msgstr "<b>Stereo Extra</b>"
 
 #: src/streamtuner/icecast-model.cc:126 src/streamtuner/shoutcast-model.cc:131
 msgid "Type"
-msgstr ""
+msgstr "Tipo"
 
 #: src/streamtuner/icecast-model.cc:132
 msgid "Current Song"
-msgstr ""
+msgstr "Música atual"
 
 #: src/streamtuner/icecast-model.cc:164
 msgid "Other"
-msgstr ""
+msgstr "Outro"
 
 #: src/streamtuner/ihr-model.cc:63
 msgid "Market"
-msgstr ""
+msgstr "Mercado"
 
 #: src/streamtuner/ihr-model.cc:156
 msgid "Call Letters"
-msgstr ""
+msgstr "Indicativo"
 
 #: src/streamtuner/ihr-model.cc:162
 msgid "Description"
-msgstr ""
+msgstr "Descrição"
 
 #: src/streamtuner/shoutcast-model.cc:128
 msgid "Listeners"
-msgstr ""
+msgstr "Ouvintes"
 
 #: src/streamtuner/shoutcast-model.cc:188
 msgid "Top 500 Stations"
-msgstr ""
+msgstr "Estações Top 500"
 
 #: src/streamtuner/shoutcast-model.cc:189
 msgid "Alternative"
-msgstr ""
+msgstr "Alternativa"
 
 #: src/streamtuner/shoutcast-model.cc:190
 msgid "Blues"
@@ -4199,7 +4200,7 @@ msgstr "Country"
 
 #: src/streamtuner/shoutcast-model.cc:193
 msgid "Decades"
-msgstr ""
+msgstr "Décadas"
 
 #: src/streamtuner/shoutcast-model.cc:194
 msgid "Easy Listening"
@@ -4207,7 +4208,7 @@ msgstr "Easy Listening"
 
 #: src/streamtuner/shoutcast-model.cc:195
 msgid "Electronic"
-msgstr ""
+msgstr "Eletrônica"
 
 #: src/streamtuner/shoutcast-model.cc:196
 msgid "Folk"
@@ -4215,11 +4216,11 @@ msgstr "Folk"
 
 #: src/streamtuner/shoutcast-model.cc:197
 msgid "Inspirational"
-msgstr ""
+msgstr "Inspirada"
 
 #: src/streamtuner/shoutcast-model.cc:198
 msgid "International"
-msgstr ""
+msgstr "Internacional"
 
 #: src/streamtuner/shoutcast-model.cc:199
 msgid "Jazz"
@@ -4227,7 +4228,7 @@ msgstr "Jazz"
 
 #: src/streamtuner/shoutcast-model.cc:200
 msgid "Latin"
-msgstr ""
+msgstr "Latina"
 
 #: src/streamtuner/shoutcast-model.cc:201
 msgid "Metal"
@@ -4243,11 +4244,11 @@ msgstr "Pop"
 
 #: src/streamtuner/shoutcast-model.cc:205
 msgid "Public Radio"
-msgstr ""
+msgstr "Rádio Pública"
 
 #: src/streamtuner/shoutcast-model.cc:206
 msgid "R&B and Urban"
-msgstr ""
+msgstr "R&B e Urbana"
 
 #: src/streamtuner/shoutcast-model.cc:207
 msgid "Rap"
@@ -4263,31 +4264,31 @@ msgstr "Rock"
 
 #: src/streamtuner/shoutcast-model.cc:210
 msgid "Seasonal and Holiday"
-msgstr ""
+msgstr "Sazonais e Férias"
 
 #: src/streamtuner/shoutcast-model.cc:211
 msgid "Soundtracks"
-msgstr ""
+msgstr "Trilhas Sonoras"
 
 #: src/streamtuner/shoutcast-model.cc:212
 msgid "Talk"
-msgstr ""
+msgstr "Talk"
 
 #: src/streamtuner/shoutcast-model.cc:213
 msgid "Themes"
-msgstr ""
+msgstr "Temas"
 
 #: src/streamtuner/streamtuner.cc:59
 msgid "Shoutcast"
-msgstr ""
+msgstr "Shoutcast"
 
 #: src/streamtuner/streamtuner.cc:60
 msgid "Icecast"
-msgstr ""
+msgstr "Icecast"
 
 #: src/streamtuner/streamtuner.cc:71
 msgid "Stream Tuner"
-msgstr ""
+msgstr "Stream Tuner"
 
 #: src/tonegen/tonegen.cc:45
 msgid "Tone Generator"
@@ -4383,31 +4384,31 @@ msgstr "Reprodutor de arquivos no formato Vortex, por Sashnov Alexander <sashnov
 msgid ""
 "VU Meter Plugin for Audacious\n"
 "Copyright 2017-2019 Marc Sánchez Fauste"
-msgstr ""
+msgstr "Plugin Medidor de VU para Audacious\nCopyright 2017-2019 Marc Sánchez Fauste"
 
 #: src/vumeter-qt/vumeter_qt.cc:35
 msgid "<b>VU Meter Settings</b>"
-msgstr ""
+msgstr "<b>Configurações do Medidor de VU</b>"
 
 #: src/vumeter-qt/vumeter_qt.cc:37
 msgid "Peak hold time:"
-msgstr ""
+msgstr "Tempo de espera de pico:"
 
 #: src/vumeter-qt/vumeter_qt.cc:42
 msgid "Fall-off time:"
-msgstr ""
+msgstr "Tempo de queda:"
 
 #: src/vumeter-qt/vumeter_qt.cc:44
 msgid "dB/second"
-msgstr ""
+msgstr "dB/segundo"
 
 #: src/vumeter-qt/vumeter_qt.cc:46
 msgid "Display legend"
-msgstr ""
+msgstr "Mostrar legenda"
 
 #: src/vumeter-qt/vumeter_qt.h:37
 msgid "VU Meter"
-msgstr ""
+msgstr "Medidor de VU"
 
 #: src/waveout/waveout.cc:43
 msgid "Win32 waveOut"
