--- a/po/ca.po
+++ b/po/ca.po
@@ -12,7 +12,7 @@
 # Robert Antoni Buj Gelonch <rbuj@fedoraproject.org>, 2016-2018
 msgid ""
 msgstr ""
-"Project-Id-Version: Audacious Plugins Plugins\n"
+"Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: https://redmine.audacious-media-player.org/\n"
 "POT-Creation-Date: 2021-02-01 19:27+0100\n"
 "PO-Revision-Date: 2020-12-20 23:15+0000\n"
