--- a/po/es.po
+++ b/po/es.po
@@ -28,7 +28,7 @@
 # enjolras <yo@miguelrevilla.com>, 2012
 msgid ""
 msgstr ""
-"Project-Id-Version: Audacious Plugins Plugins\n"
+"Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: https://redmine.audacious-media-player.org/\n"
 "POT-Creation-Date: 2021-02-01 19:27+0100\n"
 "PO-Revision-Date: 2020-12-25 09:33+0000\n"
