--- a/po/es_MX.po
+++ b/po/es_MX.po
@@ -7,7 +7,7 @@
 # Jorge A. García Sosa <kamesennin555@icloud.com>, 2014-2017,2019-2020
 msgid ""
 msgstr ""
-"Project-Id-Version: Audacious Plugins Plugins\n"
+"Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: https://redmine.audacious-media-player.org/\n"
 "POT-Creation-Date: 2021-02-01 19:27+0100\n"
 "PO-Revision-Date: 2020-12-20 23:15+0000\n"
