--- a/po/fi.po
+++ b/po/fi.po
@@ -9,7 +9,7 @@
 # Kimmo Kujansuu <mrkujansuu@gmail.com>, 2020
 msgid ""
 msgstr ""
-"Project-Id-Version: Audacious Plugins Plugins\n"
+"Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: https://redmine.audacious-media-player.org/\n"
 "POT-Creation-Date: 2021-02-01 19:27+0100\n"
 "PO-Revision-Date: 2020-12-22 17:15+0000\n"
