--- a/po/gl.po
+++ b/po/gl.po
@@ -10,7 +10,7 @@
 # Miguel Anxo Bouzada <mbouzada@gmail.com>, 2012,2014-2015
 msgid ""
 msgstr ""
-"Project-Id-Version: Audacious Plugins Plugins\n"
+"Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: https://redmine.audacious-media-player.org/\n"
 "POT-Creation-Date: 2021-02-01 19:27+0100\n"
 "PO-Revision-Date: 2020-12-20 23:15+0000\n"
