--- a/po/hu.po
+++ b/po/hu.po
@@ -14,7 +14,7 @@
 # Péter Polonkai <polesz@nedudu.hu>, 2011-2012,2014-2016
 msgid ""
 msgstr ""
-"Project-Id-Version: Audacious Plugins Plugins\n"
+"Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: https://redmine.audacious-media-player.org/\n"
 "POT-Creation-Date: 2021-02-01 19:27+0100\n"
 "PO-Revision-Date: 2020-12-20 23:15+0000\n"
