--- a/po/lv.po
+++ b/po/lv.po
@@ -8,7 +8,7 @@
 # Oskars G <oskars@alumni.lu.lv>, 2020
 msgid ""
 msgstr ""
-"Project-Id-Version: Audacious Plugins Plugins\n"
+"Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: https://redmine.audacious-media-player.org/\n"
 "POT-Creation-Date: 2021-02-01 19:27+0100\n"
 "PO-Revision-Date: 2020-12-24 22:44+0000\n"
