--- a/po/sr_RS.po
+++ b/po/sr_RS.po
@@ -6,7 +6,7 @@
 # Мирослав Николић <miroslavnikolic@rocketmail.com>, 2011-2012
 msgid ""
 msgstr ""
-"Project-Id-Version: Audacious Plugins Plugins\n"
+"Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: https://redmine.audacious-media-player.org/\n"
 "POT-Creation-Date: 2021-02-01 19:27+0100\n"
 "PO-Revision-Date: 2020-12-20 23:15+0000\n"
